--- a/Clendar/Clendar.entitlements
+++ b/Clendar/Clendar.entitlements
@@ -7,9 +7,7 @@
 	<key>com.apple.security.app-sandbox</key>
 	<true/>
 	<key>com.apple.security.application-groups</key>
-	<array>
-		<string>group.com.vinhnx.Clendar</string>
-	</array>
+	<array/>
 	<key>com.apple.security.network.client</key>
 	<true/>
 	<key>com.apple.security.personal-information.addressbook</key>
